
[project]
name = "kantan-sleep-tracker"
version = "0.1.0"
description = "Simple sleep tracking that allows you to assess sleep quality and view statistics"
authors = [
    {name = "Niko Honu", email = "nikohonu@gmail.com"},
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pyside6>=6.5.1.1",
    "rich>=13.4.2",
    "pandas>=2.0.2",
    "matplotlib>=3.7.1",
    "click>=8.1.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "pyright>=1.1.316",
    "isort>=5.12.0",
]

[project.scripts]
kst = "kantan_sleep_tracker.__main__:main"
